# candidate-data-transformer

./: .gitignore  DESIGN.md  README.md  pyproject.toml
sample_data/: ats_export.json  custom_config.json  github_profile.json  large_ats_export.json  large_recruiter.csv  linkedin_profile.json  recruiter.csv  recruiter_notes.txt  result_default.json  result_projected.json  resume.txt
src/candidate_transformer/: __init__.py  cli.py  confidence.py  entity_matcher.py  merge_engine.py  models.py  normalizers.py  pipeline.py  projection.py  schema_validator.py  web_ui.py
src/candidate_transformer/ingestors/: __init__.py  csv_ingestor.py  github_ingestor.py  json_ingestor.py  linkedin_ingestor.py  notes_ingestor.py  resume_ingestor.py
tests/: conftest.py  test_entity_matcher.py  test_ingestors.py  test_merge_engine.py  test_normalizers.py  test_pipeline.py  test_projection.py
