[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "1.0.0"
description = "Multi-Source Candidate Data Transformer - Production-grade pipeline for ingesting, normalizing, and merging candidate profiles from multiple sources."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea", email = "andrea@example.com"}
]

dependencies = [
    "pydantic>=2.5.0",
    "phonenumbers>=8.13.0",
    "pycountry>=23.12.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
